scraping with splash

--- a/amazon_reviews.ipynb
+++ b/amazon_reviews.ipynb
@@ -23,10 +23,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import requests\n",
     "from requests import get\n",
     "import pandas as pd\n",
     "from bs4 import BeautifulSoup"
@@ -41,12 +42,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "amazon_url = \"https://www.amazon.com/Lifetime-Walking-American-Pitbull-Shepherd/product-reviews/B087NQ9V3K/ref=cm_cr_arp_d_viewopt_srt?ie=UTF8&reviewerType=all_reviews&sortBy=recent&pageNumber=1\"\n"
+    "# stash away the url in a variable\n",
+    "url = \"https://www.amazon.com/Lifetime-Walking-American-Pitbull-Shepherd/product-reviews/B087NQ9V3K/ref=cm_cr_arp_d_viewopt_srt?ie=UTF8&reviewerType=all_reviews&sortBy=recent&pageNumber=1\"\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Docker workaround using splash"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# use splash to past the 503 response you would get from trying to scrape without it\n",
+    "r = requests.get('http://localhost:8050/render.html', params={'url': url, 'wait': 2})\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# make the review soup\n",
+    "soup = BeautifulSoup(r.text, 'html.parser')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Amazon.com: Customer reviews: W/W Lifetime Gold Dog Chain Collar Walking Metal Chain Collar with Design Secure Buckle,18K Cuban Link Strong Heavy Duty Chew Proof for Medium Dogs(19MM, 15\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "# check out the title \n",
+    "print(soup.title.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# find all returns a list that we can loop through\n",
+    "reviews = soup.find_all('div', {'data-hook': 'review'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0\n",
+      "5.0\n",
+      "5.0\n",
+      "5.0\n",
+      "1.0\n",
+      "5.0\n",
+      "5.0\n",
+      "5.0\n",
+      "5.0\n",
+      "5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# create loop to grab title, rating, and review\n",
+    "for item in reviews:\n",
+    "    title = item.find('a', {'data-hook': 'review-title'}).text.strip()\n",
+    "    rating = float(item.find('i', {'data-hook': 'review-star-rating'}).text.replace('out of 5 stars', '').strip())\n",
+    "    print(rating)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -61,7 +163,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = get(amazon_url)"
+    "response = get(url)"
    ]
   },
   {
