created loop to grab product, title, rating, and review

--- a/amazon_reviews.ipynb
+++ b/amazon_reviews.ipynb
@@ -101,38 +101,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# find all returns a list that we can loop through\n",
+    "# find all returns in a list that we can loop through\n",
     "reviews = soup.find_all('div', {'data-hook': 'review'})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "5.0\n",
-      "5.0\n",
-      "5.0\n",
-      "5.0\n",
-      "1.0\n",
-      "5.0\n",
-      "5.0\n",
-      "5.0\n",
-      "5.0\n",
-      "5.0\n"
+      "{'title': 'So cute!!!', 'rating': 5.0, 'review_body': 'So cute! It’s heavier duty than I was anticipating, but does feel a little cheap. I wouldn’t trust attaching a leash to it, but I don’t think that’s the point of something like this. Ordering another one for my older Vizsla now!'}\n",
+      "{'title': 'Nice quality', 'rating': 5.0, 'review_body': 'Has not changed colors yet. Very comfortable on my dog’s neck. Great value for my money.'}\n",
+      "{'title': 'Worth every penny!', 'rating': 5.0, 'review_body': ''}\n",
+      "{'title': 'Make sure to measure your dogs neck so it’s a bit loose on them', 'rating': 5.0, 'review_body': 'Everything about the chain was good'}\n",
+      "{'title': 'you can do better', 'rating': 1.0, 'review_body': 'i like the finished everything but this chain is not worth at all bcs of this lock not stable my dog skipped trough and i had alot trouble please u can do better'}\n",
+      "{'title': 'Perfect for my dog', 'rating': 5.0, 'review_body': 'Is beautiful'}\n",
+      "{'title': 'Worth the purchase', 'rating': 5.0, 'review_body': 'Bought this chain for our American Pocket Bully and love it. Everyone compliments his chain. It’s very sturdy, thick, and has a little weight to it. When he outgrows this one, we will buy the exact same product except a bigger size. It came packaged nicely and was shipped in a timely manner.'}\n",
+      "{'title': 'Would recommend', 'rating': 5.0, 'review_body': 'The media could not be loaded.\\n                \\n\\n\\n\\n\\xa0My dog is 4 months old weighs 30 pounds. I got the 18in it fits perfect. It’s a little heavy but good quality!'}\n",
+      "{'title': 'Strong and sturdy', 'rating': 5.0, 'review_body': 'Pretty good fit for 18 in. My dog doesnt even mind putting it on the first time.'}\n",
+      "{'title': 'Love it', 'rating': 5.0, 'review_body': 'My boy looks so good in those Cuban link chain.'}\n"
      ]
     }
    ],
    "source": [
     "# create loop to grab title, rating, and review\n",
     "for item in reviews:\n",
-    "    title = item.find('a', {'data-hook': 'review-title'}).text.strip()\n",
-    "    rating = float(item.find('i', {'data-hook': 'review-star-rating'}).text.replace('out of 5 stars', '').strip())\n",
-    "    print(rating)\n",
+    "    # make into a dictionary by turning title, rating, and body into keys and data that we are\n",
+    "    # scraping into values\n",
+    "    review = {\n",
+    "    'product': soup.title.text.replace('Amazon.com: Customer reviews:', '').strip(),\n",
+    "    'title' : item.find('a', {'data-hook': 'review-title'}).text.strip(),\n",
+    "    'rating' : float(item.find('i', {'data-hook': 'review-star-rating'}).text.replace('out of 5 stars', '').strip()),\n",
+    "    'review_body' : item.find('span', {'data-hook': 'review-body'}).text.strip(),}\n",
+    "    print(review)\n",
+    "    \n",
     "    "
    ]
   },
