--- a/amazon_reviews.ipynb
+++ b/amazon_reviews.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Scraping Amazon Dog Collar reviews for a friend who would like to know what are the main negative words used in the reviews"
+    "Scraping Amazon Dog Collar reviews for a friend who would like some analysis on what factors might be driving negative reviews.  Will need to install docker to use splash to scrape amazon.  "
    ]
   },
   {
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,8 @@
    "outputs": [],
    "source": [
     "# stash away the url in a variable\n",
-    "url = \"https://www.amazon.com/Lifetime-Walking-American-Pitbull-Shepherd/product-reviews/B087NQ9V3K/ref=cm_cr_arp_d_viewopt_srt?ie=UTF8&reviewerType=all_reviews&sortBy=recent&pageNumber=1\"\n"
+    "url = \"https://www.amazon.com/Lifetime-Walking-American-Pitbull-Shepherd/product-reviews/B087NQ9V3K/ref=cm_cr_arp_d_viewopt_srt?ie=UTF8&reviewerType=all_reviews&sortBy=recent&pageNumber=1\"\n",
+    "reviewlist = []"
    ]
   },
   {
@@ -107,26 +108,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'title': 'So cute!!!', 'rating': 5.0, 'review_body': 'So cute! It’s heavier duty than I was anticipating, but does feel a little cheap. I wouldn’t trust attaching a leash to it, but I don’t think that’s the point of something like this. Ordering another one for my older Vizsla now!'}\n",
-      "{'title': 'Nice quality', 'rating': 5.0, 'review_body': 'Has not changed colors yet. Very comfortable on my dog’s neck. Great value for my money.'}\n",
-      "{'title': 'Worth every penny!', 'rating': 5.0, 'review_body': ''}\n",
-      "{'title': 'Make sure to measure your dogs neck so it’s a bit loose on them', 'rating': 5.0, 'review_body': 'Everything about the chain was good'}\n",
-      "{'title': 'you can do better', 'rating': 1.0, 'review_body': 'i like the finished everything but this chain is not worth at all bcs of this lock not stable my dog skipped trough and i had alot trouble please u can do better'}\n",
-      "{'title': 'Perfect for my dog', 'rating': 5.0, 'review_body': 'Is beautiful'}\n",
-      "{'title': 'Worth the purchase', 'rating': 5.0, 'review_body': 'Bought this chain for our American Pocket Bully and love it. Everyone compliments his chain. It’s very sturdy, thick, and has a little weight to it. When he outgrows this one, we will buy the exact same product except a bigger size. It came packaged nicely and was shipped in a timely manner.'}\n",
-      "{'title': 'Would recommend', 'rating': 5.0, 'review_body': 'The media could not be loaded.\\n                \\n\\n\\n\\n\\xa0My dog is 4 months old weighs 30 pounds. I got the 18in it fits perfect. It’s a little heavy but good quality!'}\n",
-      "{'title': 'Strong and sturdy', 'rating': 5.0, 'review_body': 'Pretty good fit for 18 in. My dog doesnt even mind putting it on the first time.'}\n",
-      "{'title': 'Love it', 'rating': 5.0, 'review_body': 'My boy looks so good in those Cuban link chain.'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# create loop to grab title, rating, and review\n",
     "for item in reviews:\n",
@@ -137,10 +121,132 @@
     "    'title' : item.find('a', {'data-hook': 'review-title'}).text.strip(),\n",
     "    'rating' : float(item.find('i', {'data-hook': 'review-star-rating'}).text.replace('out of 5 stars', '').strip()),\n",
     "    'review_body' : item.find('span', {'data-hook': 'review-body'}).text.strip(),}\n",
-    "    print(review)\n",
+    "    \n",
     "    \n",
     "    "
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Make everything into useful functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_soup(url):\n",
+    "    r = requests.get('http://localhost:8050/render.html', params={'url': url, 'wait': 2})\n",
+    "    soup = BeautifulSoup(r.text, 'html.parser')\n",
+    "    return soup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "reviewlist = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_reviews(soup):\n",
+    "    reviews = soup.find_all('div', {'data-hook': 'review'})\n",
+    "    try:\n",
+    "        for item in reviews:\n",
+    "            review = {\n",
+    "            'product': soup.title.text.replace('Amazon.com: Customer reviews:', '').strip(),\n",
+    "            'title' : item.find('a', {'data-hook': 'review-title'}).text.strip(),\n",
+    "            'rating' : float(item.find('i', {'data-hook': 'review-star-rating'}).text.replace('out of 5 stars', '').strip()),\n",
+    "            'review_body' : item.find('span', {'data-hook': 'review-body'}).text.strip(),\n",
+    "            }\n",
+    "            reviewlist.append(review)\n",
+    "    except:\n",
+    "        pass"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soup = get_soup('https://www.amazon.com/Lifetime-Walking-American-Pitbull-Shepherd/product-reviews/B087NQ9V3K/ref=cm_cr_arp_d_viewopt_srt?ie=UTF8&reviewerType=all_reviews&sortBy=recent&pageNumber=1')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_reviews(soup)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(reviewlist))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'product': 'W/W Lifetime Gold Dog Chain Collar Walking Metal Chain Collar with Design Secure Buckle,18K Cuban Link Strong Heavy Duty Chew Proof for Medium Dogs(19MM, 15\")', 'title': 'So cute!!!', 'rating': 5.0, 'review_body': 'So cute! It’s heavier duty than I was anticipating, but does feel a little cheap. I wouldn’t trust attaching a leash to it, but I don’t think that’s the point of something like this. Ordering another one for my older Vizsla now!'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(reviewlist[0])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Deal with pages"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -160,7 +266,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Check Response"
+    "### Check Response\n",
+    "This was the response before using splash"
    ]
   },
   {
