--- a/amazon_reviews.ipynb
+++ b/amazon_reviews.ipynb
@@ -236,24 +236,183 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20\n",
+      "30\n",
+      "40\n",
+      "50\n",
+      "60\n",
+      "70\n",
+      "80\n",
+      "90\n",
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "for x in range(1,10):\n",
+    "    soup = get_soup(f'https://www.amazon.com/Lifetime-Walking-American-Pitbull-Shepherd/product-reviews/B087NQ9V3K/ref=cm_cr_arp_d_viewopt_srt?ie=UTF8&reviewerType=all_reviews&sortBy=recent&pageNumber={x}')\n",
+    "    print(f'Getting page: {x}')\n",
+    "    get_reviews(soup)\n",
+    "    print(len(reviewlist))\n",
+    "    if not soup.find('li', {'class': 'a-disabled a-last'}):\n",
+    "        pass\n",
+    "    else:\n",
+    "        break\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Make into dataframe"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = pd.DataFrame(reviewlist)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>product</th>\n",
+       "      <th>title</th>\n",
+       "      <th>rating</th>\n",
+       "      <th>review_body</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>W/W Lifetime Gold Dog Chain Collar Walking Met...</td>\n",
+       "      <td>So cute!!!</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>So cute! It’s heavier duty than I was anticipa...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>W/W Lifetime Gold Dog Chain Collar Walking Met...</td>\n",
+       "      <td>Nice quality</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Has not changed colors yet. Very comfortable o...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>W/W Lifetime Gold Dog Chain Collar Walking Met...</td>\n",
+       "      <td>Worth every penny!</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>W/W Lifetime Gold Dog Chain Collar Walking Met...</td>\n",
+       "      <td>Make sure to measure your dogs neck so it’s a ...</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Everything about the chain was good</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>W/W Lifetime Gold Dog Chain Collar Walking Met...</td>\n",
+       "      <td>you can do better</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>i like the finished everything but this chain ...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             product  \\\n",
+       "0  W/W Lifetime Gold Dog Chain Collar Walking Met...   \n",
+       "1  W/W Lifetime Gold Dog Chain Collar Walking Met...   \n",
+       "2  W/W Lifetime Gold Dog Chain Collar Walking Met...   \n",
+       "3  W/W Lifetime Gold Dog Chain Collar Walking Met...   \n",
+       "4  W/W Lifetime Gold Dog Chain Collar Walking Met...   \n",
+       "\n",
+       "                                               title  rating  \\\n",
+       "0                                         So cute!!!     5.0   \n",
+       "1                                       Nice quality     5.0   \n",
+       "2                                 Worth every penny!     5.0   \n",
+       "3  Make sure to measure your dogs neck so it’s a ...     5.0   \n",
+       "4                                  you can do better     1.0   \n",
+       "\n",
+       "                                         review_body  \n",
+       "0  So cute! It’s heavier duty than I was anticipa...  \n",
+       "1  Has not changed colors yet. Very comfortable o...  \n",
+       "2                                                     \n",
+       "3                Everything about the chain was good  \n",
+       "4  i like the finished everything but this chain ...  "
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 100 entries, 0 to 99\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column       Non-Null Count  Dtype  \n",
+      "---  ------       --------------  -----  \n",
+      " 0   product      100 non-null    object \n",
+      " 1   title        100 non-null    object \n",
+      " 2   rating       100 non-null    float64\n",
+      " 3   review_body  100 non-null    object \n",
+      "dtypes: float64(1), object(3)\n",
+      "memory usage: 3.2+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
   },
   {
    "cell_type": "code",
