--- a/amazon_reviews.ipynb
+++ b/amazon_reviews.ipynb
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -212,14 +212,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'product': 'W/W Lifetime Gold Dog Chain Collar Walking Metal Chain Collar with Design Secure Buckle,18K Cuban Link Strong Heavy Duty Chew Proof for Medium Dogs(19MM, 15\")', 'title': 'So cute!!!', 'rating': 5.0, 'review_body': 'So cute! It’s heavier duty than I was anticipating, but does feel a little cheap. I wouldn’t trust attaching a leash to it, but I don’t think that’s the point of something like this. Ordering another one for my older Vizsla now!'}\n"
+      "{'product': 'W/W Lifetime Gold Dog Chain Collar Walking Metal Chain Collar with Design Secure Buckle,18K Cuban Link Strong Heavy Duty Chew Proof for Medium Dogs(19MM, 15\")', 'title': 'Chain', 'rating': 4.0, 'review_body': 'Heavy chain, good quality. Rott puppy doesn’t mind. I’ll buy another when she outgrows the first one. Only complaint is the locking mechanism. It has two prongs you pinch to lock and one of them often comes out and the chain only stays on because it sort of jams. I have to re-click it fairly often. It has come completely off a couple times too so just be careful and keep your eye out. If your dog doesn’t come when called and the chain falls off outside you may be a little stressed 😅'}\n"
      ]
     }
    ],
@@ -236,21 +236,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Getting page: 1\n",
       "20\n",
+      "Getting page: 2\n",
       "30\n",
+      "Getting page: 3\n",
       "40\n",
+      "Getting page: 4\n",
       "50\n",
+      "Getting page: 5\n",
       "60\n",
+      "Getting page: 6\n",
       "70\n",
+      "Getting page: 7\n",
       "80\n",
+      "Getting page: 8\n",
       "90\n",
+      "Getting page: 9\n",
       "100\n"
      ]
     }
@@ -266,6 +275,59 @@
     "    else:\n",
     "        break\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Clean up"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#imports to help with cleaning\n",
+    "import unicodedata\n",
+    "import re\n",
+    "import json\n",
+    "\n",
+    "import nltk\n",
+    "from nltk.tokenize.toktok import ToktokTokenizer\n",
+    "from nltk.corpus import stopwords\n",
+    "\n",
+    "import pandas as pd\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
